--- a/news.html
+++ b/news.html
@@ -82,6 +82,69 @@
 
                 <h1 class="page-header">News</h1>
 
+<h1 class="page-header"><small>April 2024</small></h1>
+<p>
+<strong> iMAGINE Upstate STEAM Festival, Greenvile, SC. 
+    <br>
+    Exhibitor booth of <a href=https://go.sc.edu/pce/> NSF Center for Polymers for a Circular Economy (PCE) </a> </strong>
+    <br>
+                    <a href= images/photos/pce_1.jpg> <img src="images/photos/pce_1.jpg" height="250"></a>&nbsp;
+                <a href= images/photos/pce_2.jpg> <img src="images/photos/pce_2.jpg" height="250"></p></a>
+                   <a href= images/photos/pce_5.jpg> <img src="images/photos/pce_5.jpg" height="234"></a>&nbsp;
+                <a href= images/photos/pce_4.jpg> <img src="images/photos/pce_4.jpg" height="234"></p></a>
+</p>
+
+<h1 class="page-header"><small>March 2024</small></h1>
+
+<p>  Cassie, Rupali, Anik and Mira all presented their work at MSE MRS and Optica Poster Competition. 
+<br>
+<strong> Congratulations to Cassie on winning 3rd place in competition! </strong> </p>
+
+    <br>
+
+                <p>
+                <a href= images/photos/aps_6.jpeg> <img src="images/photos/mrs_mse_cassie.jpg" height="380"></p></a>
+ <p>______________________________</p>
+
+<p> <strong> APS MARCH MEETING 2024, Minneapolis, MN </strong>
+    <br>
+    <br>
+
+                <p>
+                <a href= images/photos/aps_1.jpg> <img src="images/photos/aps_1.jpg" width="600"></p> </a>
+                <a href= images/photos/aps_5.jpeg> <img src="images/photos/aps_5.jpeg" height="222"></a>&nbsp;
+                <a href= images/photos/aps_6.jpeg> <img src="images/photos/aps_6.jpeg" height="222"></p></a>
+
+<br>
+<p>  Our presentations (talks and posters) at the APS March Meeting 2024
+    <br>
+
+   
+<a href= https://meetings.aps.org/Meeting/MAR24/Session/W40.1/> meetings.aps.org/Meeting/MAR24/Session/W40.1 </a> 
+<br>
+<a href=https://meetings.aps.org/Meeting/MAR24/Session/T26.11/> meetings.aps.org/Meeting/MAR24/Session/T26.11 </a>
+<br>
+ <a href=https://meetings.aps.org/Meeting/MAR24/Session/T26.5/> meetings.aps.org/Meeting/MAR24/Session/T26.5 </a>
+<br>
+ <a href=https://meetings.aps.org/Meeting/MAR24/Session/D34.11/> meetings.aps.org/Meeting/MAR24/Session/D34.11 </a>
+<br>
+ <a href=https://meetings.aps.org/Meeting/MAR24/Session/OD01.2/> meetings.aps.org/Meeting/MAR24/Session/OD01.2 </a>
+<br>
+ <a href=https://meetings.aps.org/Meeting/MAR24/Session/N00.66/> meetings.aps.org/Meeting/MAR24/Session/N00.66 </a> 
+ <br>
+ <a href=https://meetings.aps.org/Meeting/MAR24/Session/N00/> meetings.aps.org/Meeting/MAR24/Session/N00 </a>
+
+</strong></p>
+                 <p>
+                <a href= images/photos/aps_2.jpg> <img src="images/photos/aps_2.jpg" height="170"></a>&nbsp;
+                <a href= images/photos/aps_3.jpg> <img src="images/photos/aps_3.jpg" height="170"></a>&nbsp;
+                <a href= images/photos/aps_4.jpg> <img src="images/photos/aps_4.jpg" height="170"></p></a>
+                <p>
+
+                
+ <p>______________________________</p>
+
+
 <h1 class="page-header"><small>January 2024</small></h1>
 <p> <strong >Welcome to our group Dr. Amir Suhail!</strong></p>
 
@@ -400,7 +463,7 @@ Congratulations to Oksana Savchak!<br><br>
 	</footer>
 
 	-->
-<p>Last updated: Sep 19, 2023</p>
+<p>Last updated: Apr 12, 2024</p>
 
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
