--- a/pubs.html
+++ b/pubs.html
@@ -82,7 +82,8 @@
                 </h1>
 <!-- Image -->
                 <A href=https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.1c09570><img src="images/jpcb.png" class="illustration"></A>                 
-<p> 100. Vaibhav Palkar, Olga Kuksenok, <strong>“Modeling Reactive Hydrogels: Focus on Controlled Degradation”</strong> , in <strong>Dynamics and Transport in Macromolecular Networks: Theory, Modelling, and Experiments (WILEY-VCH)</strong>, edited by Li-Tang Yan (in press, 2023)</p>
+<p> 100. Vaibhav Palkar, Olga Kuksenok, <strong>“Modeling Reactive Hydrogels: Focus on Controlled Degradation”</strong> , in 
+    <a href=https://www.wiley.com/en-us/Dynamics+and+Transport+in+Macromolecular+Networks%3A+Theory%2C+Modelling%2C+and+Experiments-p-9783527350988><strong>Dynamics and Transport in Macromolecular Networks: Theory, Modelling, and Experiments (WILEY-VCH)</strong>, edited by Li-Tang Yan (2024)</p></a>
 
 <p> 99. Erik LS Antonio, Arefin M Anik, Olga Kuksenok, Igor Luzinov, <a href= https://pubs.acs.org/doi/10.1021/acsami.3c07464> "<strong>“Enhancement of Polypropylene 3D-Printed Structures via the Addition of SiC Whiskers and Microwave Irradiation”</a></strong> <strong> ACS Applied Materials & Interfaces</Strong>, https://pubs.acs.org/doi/10.1021/acsami.3c07464, (2023)</p>
 
