--- a/index.html
+++ b/index.html
@@ -126,11 +126,10 @@
 
 <p>&nbsp;</p>
 
-<div class="h2"> Openings <small style="background-color:#eee; padding:3px;"><em class="flashing-text">Updated Oct 2023 </em></small></div>
+<div class="h2"> Openings <small style="background-color:#eee; padding:3px;"></small></div>
 
 <p>&nbsp;</p>
 
-<p><strong>Postdoctoral research associate: </strong> We currently have a postdoctoral opening available immediately; the position will remain open until filled.  The postdoctoral researcher will focus on the mesoscale modeling of polymers synthesized from waste feedstocks (such as oils from food waste, inedible biomass,  and carbon dioxide) to controllably tune the properties of the resulting materials. The computational efforts will be carried out  in close collaboration with the concurrent experiments within the new <em><a href=https://go.sc.edu/pce </a> <strong>NSF Center for Polymers for a Circular Economy (PCE) </strong></a></em>. Demonstrated experience in <strong> computational modeling of polymers </strong>is required. The candidates should email their CV to <em>okuksen@clemson.edu</em>. 
 
 <p><strong>Graduate students:</strong> We are often looking for highly motivated students to join our group to pursue their PhD or MS degrees in Materials Science and Engineering. For current openings please contact Dr. Kuksenok directly.  Some prior programming experience (C/C++, python, LAMMPS, COMSOL Multiphysics@, or related experience) is required. 
 
@@ -138,7 +137,7 @@
 <br></br>
 
 <p>&nbsp;</p>
-<p>Last updated: Oct 14, 2023</p>
+<p>Last updated: Apr 11, 2024</p>
 
 <p>&nbsp;</p>
 
