--- a/news.html
+++ b/news.html
@@ -82,9 +82,31 @@
 
                 <h1 class="page-header">News</h1>
 
+
+<h1 class="page-header"><small>July 2024</small></h1>
+<p>
+<strong>Congratulations to all the authors on our recent publication </strong>: Arefin M Anik, Vaibhav Palkar, Igor Luzinov, Olga Kuksenok <a href= https://iopscience.iop.org/article/10.1088/2515-7639/ad5c06/meta> <strong>“Mesoscale modeling of random chain scission in polyethylene melts
+”</a></strong> <strong>. Journal of Physics: Materials </Strong> (2024, DOI 10.1088/2515-7639/ad5c06). 
+<p>
+
+<h1 class="page-header"><small>June 2024</small></h1>
+<p>
+<strong> Clemson Sustainability Symposium, 27 Jun 2024 </strong>
+    <br>
+    Poster session during the first Clemson Sustainability Symposium organized by the Graduate Students Government’s Sustainability Committee. Congratulation to the committee members involved with an excellent symposium organization, and special thanks to Cassie Simpson, director of Sustainability committee. As a part of the sustainability effort, the posters were displayed digitally. Congratulations to Anik on 3rd place in poster competition!
+<p>
+    <a href=https://go.sc.edu/pce/> NSF Center for Polymers for a Circular Economy (PCE) </a> </strong> actively participated in the Symposium.
+    <p>
+    Many thanks to <a href=https://chemistry.stanford.edu/people/matthew-kanan/> Prof. Matt Kanan (Stanford) </a> for his most informative and inspiring plenary lecture. 
+
+    <br>
+                    <a href= images/photos/symp_2.jpg> <img src="images/photos/symp_2.jpg" height="283"></a>&nbsp;
+                <a href= images/photos/symp_1.jpg> <img src="images/photos/symp_1.jpg" height="283"></p></a>
+</p>
+
 <h1 class="page-header"><small>April 2024</small></h1>
 <p>
-<strong> iMAGINE Upstate STEAM Festival, Greenvile, SC. 
+<strong> iMAGINE Upstate STEAM Festival, Greenville, SC. 
     <br>
     Exhibitor booth of <a href=https://go.sc.edu/pce/> NSF Center for Polymers for a Circular Economy (PCE) </a> </strong>
     <br>
@@ -463,7 +485,7 @@ Congratulations to Oksana Savchak!<br><br>
 	</footer>
 
 	-->
-<p>Last updated: Apr 12, 2024</p>
+<p>Last updated: Jul 7, 2024</p>
 
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
