--- a/pubs.html
+++ b/pubs.html
@@ -82,6 +82,11 @@
                 </h1>
 <!-- Image -->
                 <A href=https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.1c09570><img src="images/jpcb.png" class="illustration"></A>                 
+<p> 101. Arefin M Anik, Vaibhav Palkar, Igor Luzinov, Olga Kuksenok <a href= https://iopscience.iop.org/article/10.1088/2515-7639/ad5c06/meta> <strong>“Mesoscale modeling of random chain scission in polyethylene melts
+”</a></strong> <strong>. Journal of Physics: Materials </Strong> (2024, DOI 10.1088/2515-7639/ad5c06). 
+<p>
+
+
 <p> 100. Vaibhav Palkar, Olga Kuksenok, <strong>“Modeling Reactive Hydrogels: Focus on Controlled Degradation”</strong> , in 
     <a href=https://www.wiley.com/en-us/Dynamics+and+Transport+in+Macromolecular+Networks%3A+Theory%2C+Modelling%2C+and+Experiments-p-9783527350988><strong>Dynamics and Transport in Macromolecular Networks: Theory, Modelling, and Experiments (WILEY-VCH)</strong>, edited by Li-Tang Yan (2024)</p></a>
 
@@ -306,7 +311,7 @@
 </p>
 <p>1. Kuksenok, O., Sugakov, V.I., and Shiyanovskii, S.V., “On the mechanism of negative effect of ionizing irradiation on conductivity of liquid crystals,” Ukrainian Physical Journal, 37 (4), 589-594 (1992).
 
-<p>Last updated: Sep 19, 2023</p>
+<p>Last updated: Jul 7,2024</p>
 
                 </ul>
             </div>
