--- a/news.html
+++ b/news.html
@@ -93,7 +93,7 @@
 <p>
 <strong> Clemson Sustainability Symposium, 27 Jun 2024 </strong>
     <br>
-    Poster session during the first Clemson Sustainability Symposium organized by the Graduate Students Government’s Sustainability Committee. Congratulation to the committee members involved with an excellent symposium organization, and special thanks to Cassie Simpson, director of Sustainability committee. As a part of the sustainability effort, the posters were displayed digitally. Congratulations to Anik on 3rd place in poster competition!
+    Poster session during the first Clemson Sustainability Symposium organized by the Graduate Students Government’s Sustainability Committee. Congratulations to the committee members involved with an excellent symposium organization, and special thanks to Cassie Simpson, director of Sustainability committee. As a part of the sustainability effort, the posters were displayed digitally. Congratulations to Anik on 3rd place in poster competition!
 <p>
     <a href=https://go.sc.edu/pce/> NSF Center for Polymers for a Circular Economy (PCE) </a> </strong> actively participated in the Symposium.
     <p>
