--- a/news.html
+++ b/news.html
@@ -82,7 +82,13 @@
 
                 <h1 class="page-header">News</h1>
 
+<h1 class="page-header"><small>August 2024</small></h1>
 
+<strong> Amir Suhail </strong> presented his work (talk and Sci-Mix poster) at the ACS Fall Meeting, Denver, CO.
+    <br>
+This is our collaborative work with Dr. Tang group within the <a href=https://go.sc.edu/pce/> NSF Center for Polymers for a Circular Economy (PCE) </a> </strong>  <p>
+     <a href= images/photos/Amir_ACS.jpg> <img src="images/photos/Amir_ACS.jpg" height="283"></p></a>
+</p>
 <h1 class="page-header"><small>July 2024</small></h1>
 <p>
 <strong>Congratulations to all the authors on our recent publication </strong>: Arefin M Anik, Vaibhav Palkar, Igor Luzinov, Olga Kuksenok <a href= https://iopscience.iop.org/article/10.1088/2515-7639/ad5c06/meta> <strong>“Mesoscale modeling of random chain scission in polyethylene melts
