--- a/news.html
+++ b/news.html
@@ -81,6 +81,37 @@
             <div class="col-lg-12">
 
                 <h1 class="page-header">News</h1>
+<h1 class="page-header"><small>March 2025</small></h1>
+
+APS time of the year again! This year we are off to APS Global Physics Summit in Anaheim, CA. <strong> Amir Suhail </strong> and <strong> Rupali Sharma </strong>presented their talks and posters, <strong> Zafrin F. Mira  </strong> gave a virtual presentation. </p>
+     <a href= images/photos/aps25_1.jpg> <img src="images/photos/aps25_1.jpg" width="480"></p></a>
+<a href= images/photos/aps25_talk1.jpg> <img src="images/photos/aps25_talk1.jpg" width="480"></p></a>
+     <a href= images/photos/aps25_talk2.jpg> <img src="images/photos/aps25_talk2.jpg" width="480"></p></a>
+          <a href= images/photos/aps25_2.jpg> <img src="images/photos/aps25_2.jpg" width="480"></p></a>
+     <a href= images/photos/aps25_poster.jpg> <img src="images/photos/aps25_poster.jpg" width="480"></p></a>
+          <a href= images/photos/aps25_3.jpg> <img src="images/photos/aps25_3.jpg" width="480"></p></a>
+
+
+
+</p>
+
+<h1 class="page-header"><small>February 2025</small></h1>
+
+
+<strong>Congratulations to Amir and all the authors on our recent publication </strong>: 
+
+ Xiaomeng Li, Amir Suhail, Nagarjuna A Mahadas, Mengxue Zhang, Zhitao Hu, Morgan Stefik, Olga Kuksenok, Chuanbing Tang <a href= https://pubs.acs.org/doi/full/10.1021/acs.macromol.5c00039> <strong>“Modulating Polyethylene Mimics with Degradability via Synthesis and Modeling”</a></strong> <strong>. Macromolecules </Strong> , 58, 4, 2094–2105, <strong>(2025)</strong> 
+<p>
+
+<h1 class="page-header"><small>January 2025</small></h1>
+<p>
+<strong>Congratulations to Mira and Vaibhav on our recent publication </strong>: 
+<p> </p>Zafrin Ferdous Mira, Vaibhav Palkar, Olga Kuksenok <a href= https://pubs.rsc.org/en/content/articlehtml/2025/sm/d4sm01256a> <strong>“Characterizing dynamic heterogeneities during nanogel degradation”</a></strong> <strong>. Soft Matter </Strong> 21, 1624-1638, <strong>(2025)</strong> 
+<p>
+
+Mira's artwork was selected for the Soft Matter Front Cover Art (Congratulations again Mira!): </p>
+ <a href= images/mira.jpg> <img src="images/mira.jpg" height="600"></p></a>
+<p>
 
 <h1 class="page-header"><small>August 2024</small></h1>
 
