--- a/pubs.html
+++ b/pubs.html
@@ -81,7 +81,23 @@
                 <h1 class="page-header">Publications
                 </h1>
 <!-- Image -->
-                <A href=https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.1c09570><img src="images/jpcb.png" class="illustration"></A>                 
+  
+     <A href=https://pubs.rsc.org/en/content/articlepdf/2025/sm/d5sm90036k><img src="images/mira.jpg" class="illustration"></A>
+       <A href=https://pubs.acs.org/doi/10.1021/acs.jpcb.0c08603><img src="images/FrontCoverArt.png" class="illustration"></A> 
+    <A href= https://pubs.acs.org/doi/full/10.1021/acs.langmuir.1c00138><img src="images/Patterns.png" class="illustration"></A> 
+
+<p> 104. Xiaomeng Li, Amir Suhail, Nagarjuna A Mahadas, Mengxue Zhang, Zhitao Hu, Morgan Stefik, Olga Kuksenok, Chuanbing Tang <a href= https://pubs.acs.org/doi/full/10.1021/acs.macromol.5c00039> <strong>“Modulating Polyethylene Mimics with Degradability via Synthesis and Modeling”</a></strong> <strong>. Macromolecules </Strong> , 58, 4, 2094–2105, <strong>(2025)</strong> 
+<p>
+
+<p> 103. Zafrin Ferdous Mira, Vaibhav Palkar, Olga Kuksenok <a href= https://pubs.rsc.org/en/content/articlehtml/2025/sm/d4sm01256a> <strong>“Characterizing dynamic heterogeneities during nanogel degradation
+”</a></strong> <strong>. Soft Matter </Strong> 21, 1624-1638, <strong>(2025)</strong> 
+<p>
+
+<p> 102. Erik L.S. Antonio, Olga  Kuksenok, Igor Luzinov <a href= https://pubs.acs.org/doi/full/10.1021/acsami.4c22694> <strong>“Mechanical Interlocking of Polypropylene-Based 3D-Printed Structures with Polyethylene Terephthalate Glycol Inclusions
+”</a></strong> <strong>. ACS Applied Materials & Interfaces </Strong> 17, 11, 17398–17411, <strong>(2025)</strong> 
+<p>
+
+
 <p> 101. Arefin M Anik, Vaibhav Palkar, Igor Luzinov, Olga Kuksenok <a href= https://iopscience.iop.org/article/10.1088/2515-7639/ad5c06/meta> <strong>“Mesoscale modeling of random chain scission in polyethylene melts
 ”</a></strong> <strong>. Journal of Physics: Materials </Strong> (2024, DOI 10.1088/2515-7639/ad5c06). 
 <p>
@@ -106,8 +122,9 @@
 <p> 92. X. Wang, J. Bowman, S. Tu, D. Nykypanchuk, O. Kuksenok, and S. Minko <strong> <a href= https://pubs.acs.org/doi/10.1021/acs.langmuir.1c00872> "Polyethylene Glycol Crowder’s Effect on Enzyme Aggregation, Thermal Stability, and Residual Catalytic Activity"</a></strong>,  <em> <strong>Langmuir </em> </strong> 37, 28, 8474–8485 (2021) </p>
 
 <p> 91. Xiong, Y., Kuksenok, O. <strong> <a href= https://pubs.acs.org/doi/full/10.1021/acs.langmuir.1c00138> "Mechanical Adaptability of Patterns in Constrained Hydrogel Membranes"</a></strong>,  <em> <strong>Langmuir </strong>37 (16), 4900–4912 (2021) </em> </p>
-    <A href=https://pubs.acs.org/doi/10.1021/acs.jpcb.0c08603><img src="images/FrontCoverArt.png" class="illustration"></A> 
-    <A href= https://pubs.acs.org/doi/full/10.1021/acs.langmuir.1c00138><img src="images/Patterns.png" class="illustration"></A> 
+  
+   <A href=https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.1c09570><img src="images/jpcb.png" class="illustration"></A>
+
 <p> 90. Choudhury, C. K., Kuksenok, O. <strong> <a href= https://pubs.acs.org/doi/10.1021/acs.jpcb.0c08603> "Native-Based Dissipative Particle Dynamics Approach for <i>α</i>-Helical Folding"</a></strong>,  <em> <strong>Journal of Physical Chemistry B </strong> 124, 50, 11379–11386 (2020) </em> </p>
 
 <p> 89. Wei, L, Caliskan, T.D., Tu, S., Choudhury, C.K, Kuksenok, O, Luzinov, I. <strong><a href= https://pubs.acs.org/doi/abs/10.1021/acsami.0c08649 > "Highly Oil-Repellent Thermoplastic Boundaries via Surface Delivery of CF3 Groups by Molecular Bottlebrush Additives"</a></strong>, <em><strong>ACS Applied Materials & Interfaces </strong></em> 12 (34), 38626-38637 (2020)</p>
