--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
         <div class="row">
             <div class="col-lg-12">
 
-                <h1 class="page-header">Kuksenok Research Group<br><small>Computational Materials Design </small>
+                <h1 class="page-header">Kuksenok Research Group<br><small>Computational Design of Polymer Materials </small>
                 </h1>
-                 <a href=people.html><img src="group.jpg" style="max-width:600px;width:100%"></a>
+                 <a href=people.html><img src="group.jpg" style="max-width:900px;width:100%"></a>
 
 
 <!--                <div class="illustration" style="width:40%;max-width:400px">
