--- a/news.html
+++ b/news.html
@@ -81,17 +81,34 @@
             <div class="col-lg-12">
 
                 <h1 class="page-header">News</h1>
+
+<h1 class="page-header"><small>April 2025</small></h1>
+
+
+<strong>Congratulations to Amir and all the authors on our recent publication </strong>: 
+
+<p> Nagarjuna A. Mahadas, Amir Suhail, Martin Taylor Sobczak, Xiaomeng Li, Kezhi Chen, Kenan Song, Guangbin Dong, Olga Kuksenok, and Chuanbing Tang <a href= https://pubs.acs.org/doi/10.1021/acs.macromol.5c00176> <strong>“High Molecular Weight Biobased Long-Chain Aliphatic Polyesters with Degradability: Insights into Mimicking Polyethylene”</a></strong> <strong>. Macromolecules </Strong> , 58, 8, 4070-4081, <strong>(2025)</strong> 
+<p>
+_____________________________________________
+<p>
+</p>
+
+<strong>Congratulations to Rachel, Mira and Anik:</strong>: 
+<p>
+ <a href= images/awards_25.jpg> <img src="images/awards_25.jpg" height="360"></p></a>
+<p>
+<p>
+
 <h1 class="page-header"><small>March 2025</small></h1>
 
 APS time of the year again! This year we are off to APS Global Physics Summit in Anaheim, CA. <strong> Amir Suhail </strong> and <strong> Rupali Sharma </strong>presented their talks and posters, <strong> Zafrin F. Mira  </strong> gave a virtual presentation. </p>
-     <a href= images/photos/aps25_1.jpg> <img src="images/photos/aps25_1.jpg" width="480"></p></a>
-<a href= images/photos/aps25_talk1.jpg> <img src="images/photos/aps25_talk1.jpg" width="480"></p></a>
-     <a href= images/photos/aps25_talk2.jpg> <img src="images/photos/aps25_talk2.jpg" width="480"></p></a>
-          <a href= images/photos/aps25_2.jpg> <img src="images/photos/aps25_2.jpg" width="480"></p></a>
-     <a href= images/photos/aps25_poster.jpg> <img src="images/photos/aps25_poster.jpg" width="480"></p></a>
-          <a href= images/photos/aps25_3.jpg> <img src="images/photos/aps25_3.jpg" width="480"></p></a>
-
-
+     <a href= images/photos/aps25_2.jpg> <img src="images/photos/aps25_2.jpg" width="560"></p></a>
+<a href= images/photos/aps25_talk1.jpg> <img src="images/photos/aps25_talk1.jpg" width="560"></p></a>
+     <a href= images/photos/aps25_talk2.jpg> <img src="images/photos/aps25_talk2.jpg" width="560"></p></a>
+      <a href= images/photos/aps25_poster.jpg> <img src="images/photos/aps25_poster.jpg" height="200"></a>&nbsp;
+          <a href= images/photos/aps25_3.jpg> <img src="images/photos/aps25_3.jpg" height="200"></p></a>
+         <a href= images/photos/aps25_1.jpg> <img src="images/photos/aps25_1.jpg" width="310"></a>&nbsp;
+ 
 
 </p>
 
@@ -110,7 +127,7 @@ APS time of the year again! This year we are off to APS Global Physics Summit in
 <p>
 
 Mira's artwork was selected for the Soft Matter Front Cover Art (Congratulations again Mira!): </p>
- <a href= images/mira.jpg> <img src="images/mira.jpg" height="600"></p></a>
+ <a href= images/mira.jpg> <img src="images/mira.jpg" height="500"></p></a>
 <p>
 
 <h1 class="page-header"><small>August 2024</small></h1>
@@ -522,7 +539,7 @@ Congratulations to Oksana Savchak!<br><br>
 	</footer>
 
 	-->
-<p>Last updated: Jul 7, 2024</p>
+<p>Last updated: Jun 5, 2025</p>
 
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
