--- a/pubs.html
+++ b/pubs.html
@@ -86,6 +86,9 @@
        <A href=https://pubs.acs.org/doi/10.1021/acs.jpcb.0c08603><img src="images/FrontCoverArt.png" class="illustration"></A> 
     <A href= https://pubs.acs.org/doi/full/10.1021/acs.langmuir.1c00138><img src="images/Patterns.png" class="illustration"></A> 
 
+<p> 105. Nagarjuna A. Mahadas, Amir Suhail, Martin Taylor Sobczak, Xiaomeng Li, Kezhi Chen, Kenan Song, Guangbin Dong, Olga Kuksenok, and Chuanbing Tang <a href= https://pubs.acs.org/doi/10.1021/acs.macromol.5c00176> <strong>“High Molecular Weight Biobased Long-Chain Aliphatic Polyesters with Degradability: Insights into Mimicking Polyethylene”</a></strong> <strong>. Macromolecules </Strong> , 58, 8, 4070-4081, <strong>(2025)</strong> 
+<p>
+
 <p> 104. Xiaomeng Li, Amir Suhail, Nagarjuna A Mahadas, Mengxue Zhang, Zhitao Hu, Morgan Stefik, Olga Kuksenok, Chuanbing Tang <a href= https://pubs.acs.org/doi/full/10.1021/acs.macromol.5c00039> <strong>“Modulating Polyethylene Mimics with Degradability via Synthesis and Modeling”</a></strong> <strong>. Macromolecules </Strong> , 58, 4, 2094–2105, <strong>(2025)</strong> 
 <p>
 
@@ -328,7 +331,7 @@
 </p>
 <p>1. Kuksenok, O., Sugakov, V.I., and Shiyanovskii, S.V., “On the mechanism of negative effect of ionizing irradiation on conductivity of liquid crystals,” Ukrainian Physical Journal, 37 (4), 589-594 (1992).
 
-<p>Last updated: Jul 7,2024</p>
+<p>Last updated: Jun 5,2025</p>
 
                 </ul>
             </div>
