--- a/index.html
+++ b/index.html
@@ -104,15 +104,14 @@
 
 
                 <p style="margin-top:20px">
-                <b>We focus on computational design of advanced polymer-based materials, including sustainable materials and biomimetic materials with properties and functionalities inspired by nature. For the current updates, check our <a href=https://cecas.clemson.edu/kuksenoklab/news.html>News</a> page.</b>
+                <b>We focus on computational design of advanced polymeric materials, including sustainable materials and biomimetic materials with properties and functionalities inspired by nature. For current updates, check our <a href=https://cecas.clemson.edu/kuksenoklab/news.html>News</a> page.</b>
 
-                <br></br> About the PI: Dr. Kuksenok is an Associate Professor and Director of Graduate Program at the Materials Science and Engineering Department at Clemson University.  She  received her PhD in Physics and Mathematics from the Institute of Physics, National Academy of Sciences of Ukraine, Kiev, Ukraine. Dr. Kuksenok’s research interests and accomplishments include modeling of polymer blends and networks on multiple length scales, computational design of responsive materials, biomimetic and biological materials, and pattern formation in non-equilibrium systems.  <em><a href=https://scholar.google.com/citations?user=T9icvtgAAAAJ&hl=en&oi=ao><strong>More on Google Scholar </strong></a></em></p>
+                <br></br> About the PI: Dr. Kuksenok is a Professor and Director of the Graduate Program in the Materials Science and Engineering Department. She received her Ph.D. in Physics and Mathematics from the Institute of Physics, National Academy of Sciences of Ukraine, Kyiv, Ukraine. Dr. Kuksenok’s research interests and accomplishments include modeling reactive polymer systems across multiple length scales, computational design of responsive materials, biomimetic and biological materials, and pattern formation in non-equilibrium systems.  <em><a href=https://scholar.google.com/citations?user=T9icvtgAAAAJ&hl=en&oi=ao><strong>More on Google Scholar </strong></a></em></p>
                 <br>
                 <div class="h2">Research Areas</div>
-<ul>
-<li>Modeling polymers properties and degradation </li>
-<li>Modeling soft active materials</li>
+<li> Understanding and controlling degradation of polymer materials </li>
 <li>Computational design of biomimetic materials</li>
+<li >Modeling soft active materials</li>
 <li>Pattern formation in synthetic and biological systems</li>
 </ul>
 
@@ -137,7 +136,7 @@
 <br></br>
 
 <p>&nbsp;</p>
-<p>Last updated: Apr 11, 2024</p>
+<p>Last updated: Aug 15, 2025</p>
 
 <p>&nbsp;</p>
 
