--- a/news.html
+++ b/news.html
@@ -82,9 +82,28 @@
 
                 <h1 class="page-header">News</h1>
 
+<h1 class="page-header"><small>August 2025</small></h1>
+<p><strong>Congratulations Cassandra L. Simpson, M.S.!  
+Wishing you success in your future endeavors!</strong> 
+
+ <p>
+                <a href= images/photos/cassie1.png> <img src="images/photos/cassie1.png" height="420"></a>&nbsp;
+                <a href= images/photos/cassie2.png><img src="images/photos/cassie2.png" height="420"></p></a>
+ <p><p>
+    <a href= images/photos/cassie4.png> <img src="images/photos/cassie4.png" width="600"></p> </a
+    a href= images/photos/cassie3.png> <img src="images/photos/cassie3.png" width="600"></p> </a>
+                <p>
+</p>
+<h1 class="page-header"><small>June 2025</small></h1>
+
+<strong>Congratulations to Amir, Anik and all the authors on our recent publication </strong>: 
+
+<p> Amir Suhail, Arefin M. Anik, Nagarjuna A. Mahadas, Xiaomeng Li, Chuanbing Tang, and Olga Kuksenok* <a href= https://pubs.acs.org/doi/full/10.1021/acsapm.5c00997> <strong>“Influence of Ester Functionalization on Crystallization and Melting of Polyethylene: Insights from Coarse-Grained Modeling”</a></strong> <strong>. ACS Applied Polymer Materials </Strong>, <strong>(2025)</strong> 
+<p>
+<p> Our paper was featured as an ACS Editors' Choice on Jun 6, 2025:
+        <a href= https://pubs.acs.org/doi/full/10.1021/acsapm.5c00997> <img src="images/EC.png" height="260"></p></a>
+
 <h1 class="page-header"><small>April 2025</small></h1>
-
-
 <strong>Congratulations to Amir and all the authors on our recent publication </strong>: 
 
 <p> Nagarjuna A. Mahadas, Amir Suhail, Martin Taylor Sobczak, Xiaomeng Li, Kezhi Chen, Kenan Song, Guangbin Dong, Olga Kuksenok, and Chuanbing Tang <a href= https://pubs.acs.org/doi/10.1021/acs.macromol.5c00176> <strong>“High Molecular Weight Biobased Long-Chain Aliphatic Polyesters with Degradability: Insights into Mimicking Polyethylene”</a></strong> <strong>. Macromolecules </Strong> , 58, 8, 4070-4081, <strong>(2025)</strong> 
@@ -93,9 +112,12 @@ _____________________________________________
 <p>
 </p>
 
-<strong>Congratulations to Rachel, Mira and Anik:</strong>: 
-<p>
- <a href= images/awards_25.jpg> <img src="images/awards_25.jpg" height="360"></p></a>
+<p><strong>Congratulations to Rachel, Mira and Anik: </strong> </p>
+
+<p><strong>Rachel Olukemi Olurotimi </strong> had been awarded <strong>Robert Bendheim Honor Award </strong>, the top junior in the MSE Department.</p>
+     <p><strong>Zafrin F Mira</strong> had been awarded <strong>Kentwool Educational Fellowship</strong> </p>
+        <p><strong>Arefin M Anik</strong> had been awarded <strong>Kentwool Educational Fellowship</strong></p>
+ <a href= images/awards_25.jpg> <img src="images/awards_25.jpg" width ="400"></p></a>
 <p>
 <p>
 
@@ -539,7 +561,7 @@ Congratulations to Oksana Savchak!<br><br>
 	</footer>
 
 	-->
-<p>Last updated: Jun 5, 2025</p>
+<p>Last updated: Jun 25, 2025</p>
 
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
