--- a/pubs.html
+++ b/pubs.html
@@ -81,10 +81,15 @@
                 <h1 class="page-header">Publications
                 </h1>
 <!-- Image -->
-  
-     <A href=https://pubs.rsc.org/en/content/articlepdf/2025/sm/d5sm90036k><img src="images/mira.jpg" class="illustration"></A>
+
+     <A href=https://pubs.acs.org/doi/full/10.1021/acsapm.5c00997><img src="images/EC_2.png" class="illustration"></A>
+      <A href=https://pubs.rsc.org/en/content/articlepdf/2025/sm/d5sm90036k><img src="images/mira.jpg" class="illustration"></A>
        <A href=https://pubs.acs.org/doi/10.1021/acs.jpcb.0c08603><img src="images/FrontCoverArt.png" class="illustration"></A> 
     <A href= https://pubs.acs.org/doi/full/10.1021/acs.langmuir.1c00138><img src="images/Patterns.png" class="illustration"></A> 
+
+<p> 106. Amir Suhail, Arefin M. Anik, Nagarjuna A. Mahadas, Xiaomeng Li, Chuanbing Tang, and Olga Kuksenok* <a href= https://pubs.acs.org/doi/full/10.1021/acsapm.5c00997> <strong>“Influence of Ester Functionalization on Crystallization and Melting of Polyethylene: Insights from Coarse-Grained Modeling”</a></strong> <strong>. ACS Applied Polymer Materials </Strong>, <strong>(2025)</strong>.
+</p>
+<p> <strong> Our paper was featured as an ACS Editors' Choice on Jun 6, 2025 </strong>
 
 <p> 105. Nagarjuna A. Mahadas, Amir Suhail, Martin Taylor Sobczak, Xiaomeng Li, Kezhi Chen, Kenan Song, Guangbin Dong, Olga Kuksenok, and Chuanbing Tang <a href= https://pubs.acs.org/doi/10.1021/acs.macromol.5c00176> <strong>“High Molecular Weight Biobased Long-Chain Aliphatic Polyesters with Degradability: Insights into Mimicking Polyethylene”</a></strong> <strong>. Macromolecules </Strong> , 58, 8, 4070-4081, <strong>(2025)</strong> 
 <p>
@@ -331,7 +336,7 @@
 </p>
 <p>1. Kuksenok, O., Sugakov, V.I., and Shiyanovskii, S.V., “On the mechanism of negative effect of ionizing irradiation on conductivity of liquid crystals,” Ukrainian Physical Journal, 37 (4), 589-594 (1992).
 
-<p>Last updated: Jun 5,2025</p>
+<p>Last updated: Jun 25,2025</p>
 
                 </ul>
             </div>
