--- a/pubs.html
+++ b/pubs.html
@@ -87,7 +87,11 @@
        <A href=https://pubs.acs.org/doi/10.1021/acs.jpcb.0c08603><img src="images/FrontCoverArt.png" class="illustration"></A> 
     <A href= https://pubs.acs.org/doi/full/10.1021/acs.langmuir.1c00138><img src="images/Patterns.png" class="illustration"></A> 
 
-<p> 106. Amir Suhail, Arefin M. Anik, Nagarjuna A. Mahadas, Xiaomeng Li, Chuanbing Tang, and Olga Kuksenok* <a href= https://pubs.acs.org/doi/full/10.1021/acsapm.5c00997> <strong>“Influence of Ester Functionalization on Crystallization and Melting of Polyethylene: Insights from Coarse-Grained Modeling”</a></strong> <strong>. ACS Applied Polymer Materials </Strong>, <strong>(2025)</strong>.
+<p> 107. Nagarjuna A Mahadas, Lucas AH Sanchez, Amir Suhail, Jacob Price, Arefin M Anik, Matthew W Kanan, Olga Kuksenok*, Chuanbing Tang* <a href= https://pubs.acs.org/doi/full/10.1021/jacs.5c16685> <strong>“ 
+Transforming Waste Cooking Oil into Linear and Branched Polyethylene Mimics”</a></strong> <strong>. Journal of the American Chemical Society </Strong>, <strong> (2025)</strong>.
+</p>
+
+<p> 106. Amir Suhail, Arefin M. Anik, Nagarjuna A. Mahadas, Xiaomeng Li, Chuanbing Tang, and Olga Kuksenok* <a href= https://pubs.acs.org/doi/full/10.1021/acsapm.5c00997> <strong>“Influence of Ester Functionalization on Crystallization and Melting of Polyethylene: Insights from Coarse-Grained Modeling”</a></strong> <strong>. ACS Applied Polymer Materials </Strong>, 7, 12, 7976–7987 <strong>(2025)</strong>.
 </p>
 <p> <strong> Our paper was featured as an ACS Editors' Choice on Jun 6, 2025 </strong>
 
@@ -336,7 +340,7 @@
 </p>
 <p>1. Kuksenok, O., Sugakov, V.I., and Shiyanovskii, S.V., “On the mechanism of negative effect of ionizing irradiation on conductivity of liquid crystals,” Ukrainian Physical Journal, 37 (4), 589-594 (1992).
 
-<p>Last updated: Jun 25,2025</p>
+<p>Last updated: Jan 9, 2026</p>
 
                 </ul>
             </div>
