--- a/news.html
+++ b/news.html
@@ -81,7 +81,15 @@
             <div class="col-lg-12">
 
                 <h1 class="page-header">News</h1>
+<h1 class="page-header"><small>December 2025</small></h1>
+<strong>Congratulations 🎉 to Amir, Anik, and all the authors on our recent publication in JACS </strong>: 
+Nagarjuna A Mahadas, Lucas AH Sanchez, Amir Suhail, Jacob Price, Arefin M Anik, Matthew W Kanan, Olga Kuksenok*, Chuanbing Tang* <a href= https://pubs.acs.org/doi/full/10.1021/jacs.5c16685> <strong>“ 
+Transforming Waste Cooking Oil into Linear and Branched Polyethylene Mimics”</a></strong> <strong>. Journal of the American Chemical Society </Strong>, <strong> (2025)</strong>.
 
+<hr>
+<p><strong>Congratulations to Rupali Sharma </strong> on being awarded the <strong> Kentwool Educational Fellowship </strong> and on successfully defending her PhD proposal 🎉! 
+ <a href= images/Rupali2025.png> <img src="images/Rupali2025.png" width ="270"></p></a>
+</p>
 <h1 class="page-header"><small>August 2025</small></h1>
 <p><strong>Congratulations Cassandra L. Simpson, M.S.!  
 Wishing you success in your future endeavors!</strong> 
@@ -561,7 +569,7 @@ Congratulations to Oksana Savchak!<br><br>
 	</footer>
 
 	-->
-<p>Last updated: Jun 25, 2025</p>
+<p>Last updated: Jan 9, 2026</p>
 
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
